[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkprop"
version = "0.0.1"
authors = [
  { name="Tobias Jawecki", email="tobias.jawecki@gmail.com" },
]
description = "A python package for Krylov and Magnus-Krylov based time propagation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "sympy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["Magnus integrator", "Krylov method", "time propagation"]

[project.urls]
Homepage = "https://github.com/newbisi/mkprop"
Issues = "https://github.com/newbisi/mkprop/issues"
